--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = {extras = ["all"], version = "^0.109.2"}
 uvicorn = "^0.27.1"
 loguru = "^0.7.2"
 sqlalchemy = "^2.0.27"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
